2018-09-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Handle extra space differently.

	* src/ftcommon.c (FTDemo_Draw_{Index,Glyph_Color}): Move extra pixel
	from here...
	* src/ftview.c (Render_{Stroke,Fancy,All}): ... to here.
	(Render_{Waterfall,Text}): Do not compensate.

2018-08-23  Werner Lemberg  <wl@gnu.org>

	[ftdiff] New keys `A' to `E' to select hinting mode directly.

	* src/ftdiff.c (process_event): Handle keys `A' to `E'.
	(event_help): Updated.

2018-08-04  Werner Lemberg  <wl@gnu.org>

	Fix clang warnings.

	* src/ftstring.c (Process_Event), src/ftview.c (Process_Event): Add
	cast.

2018-07-23  Hin-Tak Leung <htl10@users.sourceforge.net>

	[ttdebug] Add option `-f' to access non-first member of TTC.

	* src/ttdebug.1, src/ttdebug.c: Add a `-f face_index' switch to
	access non-first member of a TTC, plus updating the man page.

2018-07-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grfont.c (grGotobitmap): Initialize color here...
	(grWrite): ... instead of here.

2018-07-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Implement waterfall as mode 2.

	* src/ftstring.c (Render_String, Render_KernCmp): Extracted from ...
	(main): ... here.
	(Render_Waterfall): New mode function based on ftview.
	(event_help): Updated.

2018-07-03  Werner Lemberg  <wl@gnu.org>

	Fix some clang warnings.

	* graph/grfill.c (grFillRect): Use `int' for `size'.

	* src/ftstring.c (flower_init): Use `unsigned int' for `i'.
	Simplify some loops.

	* src/ftview.c (parse_cmdline) <'L'>: Use `unsigned char' casts.
	(main): Add `FT_LcdFilter' cast.

2018-07-02  Hugh McMaster  <hugh.mcmaster@outlook.com>

	Fix memory leak (patch #9666).

	* src/ftcommon.c (FTDemo_Install_Font): Always free
	`font->filepathname'.

2018-07-02  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c (Render_All): Update `FT_Get_Color_Glyph_Layer' call.

	The function's signature was changed on 2018-07-02.

2018-06-30  Alexei Podtelezhnikov  <apodtele@gmail.com>
